@@ -78,20 +78,24 @@ def mark_report_seen(report):
     except OSError:
         # file is probably not our's, so do it the slow and boring way
         # change the file's access time until it stat's different than the mtime.
-       # This might take a while if we only have 1-second resolution. Time out
-       # after 1.2 seconds.
-       timeout = 12
-       while timeout > 0:
-          f = open(report)
-          f.read(1)
-          f.close()
-          st = os.stat(report)
-          if st.st_atime > st.st_mtime:
-              break
-          time.sleep(0.1)
-          timeout -= 1
+        # This might take a while if we only have 1-second resolution. Time out
+        # after 1.2 seconds.
+        timeout = 12
+        while timeout > 0:
+            f = open(report)
+            f.read(1)
+            f.close()
+            try:
+                st = os.stat(report)
+            except OSError:
+                return
 
-       if timeout == 0:
+            if st.st_atime > st.st_mtime:
+                break
+            time.sleep(0.1)
+            timeout -= 1
+
+        if timeout == 0:
             # happens on noatime mounted partitions; just give up and delete
             delete_report(report)
 
